# conogram

./: .gitignore  Cargo.toml  LICENSE  readme.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: no_build.yml  rust.yml
derives/: Cargo.toml
derives/src/: lib.rs
examples/: echo_bot.rs
src/: api.rs  chat_member_cache.rs  client.rs  errors.rs  lib.rs  macros.rs  request.rs  server_config.rs
src/entities/: accepted_gift_types.rs  affiliate_info.rs  animation.rs  audio.rs  background_fill.rs  background_fill_freeform_gradient.rs  background_fill_gradient.rs  background_fill_solid.rs  background_type.rs  background_type_chat_theme.rs  background_type_fill.rs  background_type_pattern.rs  background_type_wallpaper.rs  birthdate.rs  bot_access_settings.rs  bot_command.rs  bot_command_scope.rs  bot_command_scope_all_chat_administrators.rs  bot_command_scope_all_group_chats.rs  bot_command_scope_all_private_chats.rs  bot_command_scope_chat.rs  bot_command_scope_chat_administrators.rs  bot_command_scope_chat_member.rs  bot_command_scope_default.rs  bot_description.rs  bot_name.rs  bot_short_description.rs  bot_subscription_updated.rs  business_bot_rights.rs  business_connection.rs  business_intro.rs  business_location.rs  business_messages_deleted.rs  business_opening_hours.rs  business_opening_hours_interval.rs  callback_game.rs  callback_query.rs  chat.rs  chat_administrator_rights.rs  chat_background.rs  (+350 more)
src/entities/misc/: chat_id.rs  formatting.rs  input_file.rs  message_effects.rs  mod.rs  reply_builder.rs  reply_markup.rs
src/methods/: add_sticker_to_set.rs  answer_callback_query.rs  answer_chat_join_request_query.rs  answer_guest_query.rs  answer_inline_query.rs  answer_pre_checkout_query.rs  answer_shipping_query.rs  answer_web_app_query.rs  approve_chat_join_request.rs  approve_suggested_post.rs  ban_chat_member.rs  ban_chat_sender_chat.rs  close.rs  close_forum_topic.rs  close_general_forum_topic.rs  convert_gift_to_stars.rs  copy_message.rs  copy_messages.rs  create_chat_invite_link.rs  create_chat_subscription_invite_link.rs  create_forum_topic.rs  create_invoice_link.rs  create_new_sticker_set.rs  decline_chat_join_request.rs  decline_suggested_post.rs  delete_all_message_reactions.rs  delete_business_messages.rs  delete_chat_photo.rs  delete_chat_sticker_set.rs  delete_ephemeral_message.rs  delete_forum_topic.rs  delete_message.rs  delete_message_reaction.rs  delete_messages.rs  delete_my_commands.rs  delete_sticker_from_set.rs  delete_sticker_set.rs  delete_story.rs  delete_webhook.rs  edit_chat_invite_link.rs  (+146 more)
src/utils/: deserialize_utils.rs  mod.rs
