[package]
name = "conogram"
description = "An async wrapper for Telegram Bot API"
version = "0.2.22"
edition = "2021"
license = "MIT"
homepage = "https://github.com/ENCRYPTEDFOREVER/conogram"
repository = "https://github.com/ENCRYPTEDFOREVER/conogram"
readme = "readme.md"
categories = ["api-bindings", "asynchronous"]
keywords = ["telegram", "bot", "telegram-bot", "telegram-bot-api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conogram-derives = { path = "./derives", version = "0.1.0" }

tokio = { version = "1.25.0", features = ["fs"] }
reqwest = { version = "0.12.7", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.93"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
log = "0.4.18"
thiserror = "2.0.11"
dashmap = { version = "6.1.0", features = ["inline"] }


[features]
